--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.url=${POSTGRES_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
-
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:/db/migration
-
 spring.security.user.details-service=none
+
+jwt.secret = ${JWT_SECRET_BASE64}
