--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.flyway.locations=classpath:/db/migration
 spring.security.user.details-service=none
 
 jwt.secret = ${JWT_SECRET_BASE64}
+
+jwt.access-token.validity-seconds=900
+jwt.refresh-token.validity-seconds=2592000
+
+cookie.max-age-seconds=900
